RESOLVED FIXED300154
[Site Isolation] Main frame's Document.activeElement incorrectly reports iframe after focus is relinquished from a cross-origin iframe to the user agent chrome
https://bugs.webkit.org/show_bug.cgi?id=300154
Summary [Site Isolation] Main frame's Document.activeElement incorrectly reports ifra...
Abrar Rahman Protyasha
Reported 2025-10-03 17:23:33 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-10-06 01:35:42 PDT
EWS
Comment 2 2025-10-06 11:05:58 PDT
Committed 301071@main (5493989ddb66): <https://commits.webkit.org/301071@main> Reviewed commits have been landed. Closing PR #51854 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.